--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "java.compile.nullAnalysis.mode": "automatic",
   "cSpell.words": [
     "depotprocessor"
-  ]
+  ],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
